<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_frame"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
 
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_bg_rounded_corner"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_registrierung"
            android:textColorHint="@color/hint_color" />
 
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_bg_rounded_corner"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_registrierung"
            android:textColorHint="@color/hint_color" />
 
        <EditText
            android:id="@+id/email_wiederholt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_bg_rounded_corner"
            android:hint="@string/hint_email_wiederholt"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_registrierung"
            android:textColorHint="@color/hint_color" />
        
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_bg_rounded_corner"
            android:hint="@string/hint_passwort"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_registrierung"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/password_wiederholt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_bg_rounded_corner"
            android:hint="@string/hint_passwort_wiederholt"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_registrierung"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/geheimnis"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/txt_bg_rounded_corner"
            android:hint="@string/hint_secret"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/input_registrierung"
            android:textColorHint="@color/hint_color" />
        
        <!-- Login Button -->
 
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_bg_rounded_corner"
            android:text="@string/btn_registrierung"
            android:textColor="@color/btn_txt_color" />
 
        <!-- Link to Login Screen -->
 
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_anmeldung"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
 
</LinearLayout>
