<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:orientation="horizontal">

	    <TextView
	        android:id="@+id/mein_Stichtag"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50dip"
	        android:layout_marginLeft="65dip"
	        android:text="@string/mein_Stichtag"
	        android:textSize="16sp" />
	    
	 
	    <EditText
	        android:layout_marginTop="50dip"
	        android:id="@+id/datum_stichtag"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dip"
            android:background="@drawable/txt_bg_rounded_corner"
	        android:padding="10dip"
	        android:textSize="16sp" 
	        android:inputType="date"/>
	    
	    		    
	</LinearLayout>
	
	    <View
	        android:id="@+id/line"
	        android:layout_width="200dip"
	        android:layout_centerHorizontal="true"
	        android:layout_height="1dip"
	        android:layout_marginTop="110dip"
	        android:background="#777777" />

	    <TextView
	        android:id="@+id/txtLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="130dip"
	        android:layout_centerHorizontal="true"
	        android:text="@string/oder"
	        android:textSize="16sp" />
	    
	    <TextView
	        android:id="@+id/txtLabel1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
	        android:layout_below="@id/txtLabel"
	        android:text="@string/nochNicht"
            android:layout_centerHorizontal="true"
	        android:textSize="16sp" />
	    
        <Button
            android:id="@+id/btn_stichtag_berechnen"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
	        android:layout_below="@id/txtLabel1"
            android:background="@color/bg_frame"
            android:text="@string/berechnen"
            android:layout_centerHorizontal="true"
            android:textColor="@color/btn_txt_color" />
	    	    
        <Button
            android:id="@+id/btn_stichtag_speichern"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dip"
	        android:layout_below="@id/btn_stichtag_berechnen"
            android:background="@drawable/btn_bg_rounded_corner"
            android:text="@string/btn_speichern"
            android:layout_centerHorizontal="true"
            android:textColor="@color/btn_txt_color" />
	    
	    <EditText
	        android:layout_marginTop="50dip"
	        android:id="@+id/datum_merker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dip"
            android:background="@drawable/txt_bg_rounded_corner"
	        android:padding="10dip"
	        android:textSize="16sp" 
	        android:inputType="date"
	        android:visibility="invisible"/>
        	    
</RelativeLayout>